methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: java.awt.Color does not take parameters
    if (couleurSol()==Color.green) {
                  ^